# algorithmic-composition-playground

./: .flake8  Makefile  pyproject.toml
black_midi/: main.py
boids/: main.py
djent/: main.py
exponential/: main.py
fern/: main.py
meshuggah_rhythm/: init.scd  main.py
novel_mapping/: main.py
only_code/: main.py
pyramid_song/: main.py
structure_synth/: main.py
synthdef/: init.scd
tone_cluster/: main.py
